welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: type mismatch;
 found   : Unit
 required: Int
    cpt = parcoursdiag(i,cpt)
                      ^Diagonal:25: warning: enclosing method parcoursdiag has result type Unit: return value discarded
  return cpt2
  ^